src/objects/ffps_custRem__Reminder__c.object
<CustomObject>
    <fields>
        <fullName>ffps_custRem__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Accounting_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set, the severities &amp; blocked dates in this reminder were applied to the Account &amp; SINs. If not set, this reminder has only been previewed, and should be re-calculated/generated again before sending to the client.</description>
        <inlineHelpText>If set, the severities &amp; blocked dates in this reminder were applied to the Account &amp; SINs. If not set, this reminder has only been previewed, and should be re-calculated/generated again before sending to the client.</inlineHelpText>
        <label>Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Date_Generated__c</fullName>
        <label>Date Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Emailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Needs_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Outstanding_Balance__c</fullName>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Overdue_Balance__c</fullName>
        <label>Overdue Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Reminder_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reminder Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Reminder_Group__c</fullName>
        <label>Reminder Group</label>
        <referenceTo>ffps_custRem__Reminder_Group__c</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Reminders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Reminder_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reminder Language</label>
        <referenceTo>ffps_custRem__Reminder_Language__c</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Reminder_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reminder Level</label>
        <referenceTo>ffps_custRem__Reminder_Level__c</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Severity_Level__c</fullName>
        <label>Severity Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reminder</label>
    <listViews>
        <fullName>ffps_custRem__All</fullName>
        <columns>NAME</columns>
        <columns>ffps_custRem__Severity_Level__c</columns>
        <columns>ffps_custRem__Date_Generated__c</columns>
        <columns>ffps_custRem__Account__c</columns>
        <columns>ffps_custRem__Accounting_Currency__c</columns>
        <columns>ffps_custRem__Overdue_Balance__c</columns>
        <columns>ffps_custRem__Outstanding_Balance__c</columns>
        <columns>ffps_custRem__Needs_Review__c</columns>
        <columns>ffps_custRem__Emailed__c</columns>
        <columns>ffps_custRem__Printed__c</columns>
        <columns>ffps_custRem__Reminder_Contact__c</columns>
        <columns>ffps_custRem__Reminder_Language__c</columns>
        <columns>ffps_custRem__Reminder_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REM{000000000}</displayFormat>
        <label>Reminder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>